# edisonprompt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: performance.rs
docs/: EXAMPLES.md  INSTALLATION.md  SHELL-COMPLETIONS.md
scripts/completions/: edisonprompt.bash  edisonprompt.fish  edisonprompt.ps1  edisonprompt.zsh  promptedo.bash  promptedo.fish  promptedo.ps1  promptedo.zsh
src/: error.rs  lib.rs  main.rs  utils.rs
src/cli/: args.rs  mod.rs  output.rs
src/cli/commands/: add.rs  completions.rs  delete.rs  edit.rs  export.rs  get.rs  import.rs  list.rs  mod.rs  search.rs
src/clipboard/: manager.rs  mod.rs
src/config/: mod.rs  paths.rs  settings.rs
src/database/: mod.rs  models.rs  operations.rs  schema.rs  search.rs
src/template/: engine.rs  mod.rs
wiki/: Command-Reference.md  Configuration.md  Contributing.md  Getting-Started.md  Home.md  Performance-Benchmarks.md  Template-Variables.md  Troubleshooting.md
